2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/special.c: included urm.h for SetResourceDB prototype
	* uwm/windows.c: small bugfix initializing originalvalues in
	  MoveResizeWin() and removed some unused variables.
	* uwm/handlers.c: removed some unused variables and did some code
	  formating
	* uwm/properties.c: included widgets.h for DrawTitle prototype and
	  special.h for SendWMProtocols prototype
	* uwm/init.c: removed unused variables and did some code reformating
	* uwm/urm.c: included ctype.h and X11/Xmu/SysUtil.h for some prototypes
	  and removed an unused variable
	* uwm/workspaces.c: included urm.h for SetResourceDB
	* uwm/windows.h: added missing prototype for DrawWinBorder
	* uwm/pix.c: removed some unused variables and corrected a bug related
	  to local variables and longjmp
	* uwm/wingroups.c: removed an unused variable
	* uwm/uwm.c: included properties.h for SetWinMapState prototype
	* uwm/rubber.h: included special.h for GrabServer prototype
	* uwm/workspaces.h: corrected a typo in BroadcastWorkSpacesInfo proto
	* uwm/rubber.c: included special.h for GrabServer prototype
	* uwm/windows.c: Deshaping of window frames now works correctly

2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/properties.c: changed SetWinMapState to unmap withdrawn windows
	  in any case.

2001-04-22  Christian Ruppert <arc@gmx.li>

	* uwm/handlers.c: shaped window titles are now also refreshed.
	* uwm/handlers.c: shaped window's titles are always centered.
	* uwm/properties.c: changed window name refreshing to work with new
	  shaped windows
	* uwm/uwm.c: changed CatchWindows not to deultimize withdrawn windows.
	* uwm/uwm.h added uc->title.x and uc->title.y
	* uwm/widgets.c: changed title and border drawing functions to work
	  with new shapes support.
	* uwm/windows.c: changed DrawWinBorder, MoveResizeWin, EnborderWin and
	  ShapeFrame to work with new shapes support

2001-04-20  Christian Ruppert <arc@gmx.li>
